# generic-ip-rs

./: .gitignore  .rustfmt.toml  Cargo.toml  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: cicd.yml
benches/: parse_ipv4.rs  parse_ipv6.rs  prefix-sets.rs
examples/: inherent-impl.rs  prefix-set-ranges.rs  route-set-aggregation.rs  subprefixes.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: no_panics.rs  stdlib_constistency_ipv4.rs  stdlib_constistency_ipv4_display.rs  stdlib_constistency_ipv6.rs  stdlib_constistency_ipv6_display.rs
src/: error.rs  fmt.rs  lib.rs  mask.rs  primitive.rs
src/addr/: mask.rs  mod.rs  range.rs
src/af/: macros.rs  mod.rs
src/any/: addr.rs  af.rs  interface.rs  mask.rs  mod.rs  prefix.rs
src/any/prefix/: len.rs  mod.rs  range.rs  set.rs  subprefixes.rs
src/concrete/: af.rs  interface.rs  mod.rs
src/concrete/addr/: convert.rs  ipv4.rs  ipv6.rs  mod.rs  ops.rs  private.rs  range.rs
src/concrete/mask/: mod.rs  private.rs  types.rs
src/concrete/prefix/: len.rs  mod.rs  ord.rs  range.rs  subprefixes.rs
src/concrete/prefix/set/: iter.rs  mod.rs  ops.rs  tests.rs
src/concrete/prefix/set/node/: from.rs  gluemap.rs  iter.rs  mod.rs  ops.rs  tests.rs
src/concrete/range/: mod.rs
src/parser/: ipv4.rs  ipv6.rs  mod.rs
src/prefix/: len.rs  mod.rs  ord.rs
src/traits/: addr.rs  af.rs  interface.rs  mask.rs  mod.rs  prefix.rs  primitive.rs
src/traits/prefix/: len.rs  mod.rs  range.rs  set.rs
test-utils/: Cargo.toml
test-utils/src/: lib.rs
tests/: prefix-set-proptests.rs  prefix-sets.rs
