[package]
name = "generic-ip"
version = "0.1.0-alpha.1"
edition = "2021"

[lib]
name = "ip"

[features]
arbitrary = ["proptest"]
std = []

[dependencies]
ipnet = { version = "^2.4", optional = true }
proptest = { version = "^1.0", optional = true }

[dev-dependencies]
version-sync = "^0.9"
proptest = "^1.0"
criterion = { version = "^0.3", features = ["html_reports"] }

[[bench]]
name = "parse_ipv4"
harness = false

[[bench]]
name = "parse_ipv6"
harness = false
