[package]
name = "generic-ip"
version = "0.1.0-rc.4"
edition = "2021"
authors = ["Ben Maddison <benm@workonline.africa>"]
description = "IP address types for generic programming"
license = "MIT"
repository = "https://github.com/wolcomm/generic-ip-rs"
readme = "README.md"
keywords = ["ip", "network", "cidr", "prefix", "subnet"]
categories = ["network-programming"]

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
all-features = true

[lib]
name = "ip"

[features]
default = ["std"]
arbitrary = ["proptest"]
std = []

[dependencies]
bitvec = { version = "^1.0", default-features = false }
ipnet = { version = "^2.4", optional = true }
num-traits = { version = "^0.2", default-features = false, features = ["i128" ] }
proptest = { version = "^1.0", optional = true }

[dev-dependencies]
version-sync = "^0.9"
itertools = "^0.10"
paste = "^1.0"
proptest = "^1.0"
criterion = { version = "^0.5", features = ["html_reports"] }
test-utils = {path = "./test-utils"}

[[bench]]
name = "parse_ipv4"
harness = false

[[bench]]
name = "parse_ipv6"
harness = false

[[bench]]
name = "prefix-sets"
harness = false
